Drop the old push scheduler Redis singleton.